--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/driver.js@1.3.1/dist/driver.css" />
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/components.css">
+    <link rel="stylesheet" href="/static/theme.css">
 </head>
 <body>
 <script>if(localStorage.getItem('biomass_dark_mode')==='1')document.body.classList.add('dark-mode');</script>
@@ -376,7 +378,10 @@
 <!-- Toast notification container -->
 <div id="toast-container" aria-live="polite" aria-relevant="additions"></div>
 
-<script src="/static/script.js"></script>
+<script src="/static/config.js"></script>
+<script src="/static/map.js"></script>
+<script src="/static/tools.js"></script>
+<script src="/static/app.js"></script>
 
 </body>
 </html>
